syntax = "proto3";

package product;

import "google/protobuf/empty.proto";
import "common/common.proto";

option java_package = "io.kuz.ecom.proto.auth";
option java_multiple_files = true;

service AuthService {
  rpc SignUpInitiateVerification(SignUpInitiateVerificationRequest) returns (SignUpInitiateVerificationResponse);
  rpc SignUpResendCode(SignUpResendCodeRequest) returns (google.protobuf.Empty);
  rpc SignUpConfirmVerification(SignUpConfirmVerificationRequest) returns (google.protobuf.Empty);
  rpc EmailSignUp(EmailSignUpRequest) returns (AuthSessionResponse);
  rpc EmailLogin(EmailLoginRequest) returns (AuthSessionResponse);
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message SignUpInitiateVerificationRequest {
  AuthProvider provider = 1;
  string identifier = 2;
}

message SignUpInitiateVerificationResponse {
  string session_id = 1;
  string retry_timeout = 2;
  string ttl = 3;
}

message SignUpResendCodeRequest {
  string session_id = 1;
}

message SignUpConfirmVerificationRequest {
  string session_id = 1;
  string code = 2;
}

message AuthSessionResponse {
  string user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message EmailSignUpRequest {
  string session_id = 1;
  string password = 3;
}

message EmailLoginRequest {
  string email = 1;
  string password = 2;
}

message LogoutRequest {
  string access_token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string user_id = 1;
}

enum AuthProvider {
  LOCAL = 0;
}